--- a/src/content/technotes/TN0032-sdui-basics.mdx
+++ b/src/content/technotes/TN0032-sdui-basics.mdx
@@ -54,7 +54,7 @@ Once you have a design system, the next step is to implement it in code. Your se
 
 ### Adopt SDUI incrementally
 
-Following all the guiding principles, teams may be tempted to overcomplicate their apps by making everything server-driven all at once. By taking small, manageable steps towards SDUI, your team can balance innovation and stability while enhancing the overall user experience.
+Following all the guiding principles, teams may be tempted to overcomplicate their apps by making everything server-driven all at once. By taking small, manageable steps toward SDUI, your team can balance innovation and stability while enhancing the overall user experience.
 
 For example, you can begin by implementing SDUI for a single UI component or feature within your application. This could be a simple widget or a specific section of your app. This allows you to test the waters and learn how SDUI works in a controlled environment.
 
