--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -10,6 +10,7 @@ tags: [schema-design]
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
 
 Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 ## Enforcing conventions
@@ -135,14 +136,14 @@ type AddCustomerResponse {
 
 When resolving naming conflicts between different domains, we recommend using one of the following:
 
-**PascalCase Prefix**
+**`PascalCase` Prefix**
 
 ```graphql
 type StoreCustomer { ... }
 type SiteCustomer { ... }
 ```
 
-**Single_Underscore Prefix**
+**`Single_Underscore` Prefix**
 
 ```graphql
 type Store_Customer { ... }
