--- a/src/content/technotes/TN0014-contracts-patterns.mdx
+++ b/src/content/technotes/TN0014-contracts-patterns.mdx
@@ -8,7 +8,8 @@ tags: [contracts, schema-design]
 
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Contracts](https://www.apollographql.com/tutorials/contracts) course on Odyssey.
 
- Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 [Contracts](/graphos/delivery/contracts/) enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers. Graph administrators define filter rules to generate **contract schemas** that are a strict subset of the source supergraph.
@@ -44,7 +45,7 @@ As a result, Apollo finds this approach best when it's acceptable to have fields
 
 ## Selective inclusion (deny by default)
 
-Although the "includes" filter can be more cumbersome to use than "excludes", we recommend using it to create contracts in most cases for the following reasons:
+Although the "includes" filter can be more cumbersome to use than "excludes," we recommend using it to create contracts in most cases for the following reasons:
 
 - It's more intuitive to reason with when working with the schema SDL. Having clear markings on which fields _are_ exposed, alongside clear naming conventions, provides an improved developer experience when working with contracts.
 
