--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -22,7 +22,7 @@ Application performance monitoring (APM) tools are critical for many organizatio
 
 Thankfully, there's an answer on connecting the two pieces of software together: [OpenTelemetry](https://opentelemetry.io/). We've previously discussed utilizing [OpenTelemetry previously to connect to Prometheus](/technotes/TN0003-opentelemetry-traces-to-prometheus), and much of the same will apply to this use-case as well.
 
-There are two ways to connect the Router to your APM using OpenTelemetry:
+There are two ways to connect the router to your APM using OpenTelemetry:
 
 - Using an OpenTelemetry Collector
 - Connecting directly
