--- a/src/content/technotes/TN0017-interfaces.mdx
+++ b/src/content/technotes/TN0017-interfaces.mdx
@@ -90,7 +90,7 @@ type Query {
 
 ## Implications of adding new implementing types
 
-When a client includes a field returning an abstract type in an operation, they usually enumerate which fields from the _concrete_ types they're interested in with "conditional fragments", like so:
+When a client includes a field returning an abstract type in an operation, they usually enumerate which fields from the _concrete_ types they're interested in with "conditional fragments," like so:
 
 ```graphql
 query OwnersAndPets {
