--- a/src/content/technotes/TN0021-graph-security.mdx
+++ b/src/content/technotes/TN0021-graph-security.mdx
@@ -23,7 +23,7 @@ When using the Apollo Router, introspection is turned off by default.
 
 </Note>
 
-[This video about GraphQL API abuse](https://youtu.be/NPDp7GHmMa0) provides a deep dive into how introspection can facilitate API exploitation and why it's also important to layer additional measures on top of disabled introspection to limit discoverability.
+[This video about GraphQL API abuse](https://youtu.be/NPDp7GHmMa0) provides a deep dive into how introspection can facilitate API exploitation and why it's also important to layer additional measures on top of introspection that's turned off to limit discoverability.
 
 ### Obfuscate error details in production
 
@@ -51,11 +51,11 @@ As a best practice for every supergraph, only the supergraph's _router_ should q
 
 The `Query._service` object includes an `sdl` field, which includes the full SDL representation of the subgraph's schema. This field exposes as much data about a subgraph's schema as a standard introspection query, which means it [should not be accessible in production](#turn-off-introspection-in-production).
 
-The `Query._entities` field enables the router to resolve fields of any type that's marked with `@key` by providing the [id for that entity](/federation/subgraph-spec#resolving-entity-fields-with-query_entities). If this field is exposed publicly, it means that any client can circumvent internal resolver logic and fetch any entity data by mimicking the Router. Because the resolver for `_entities` is automatically provided by your subgraph library, you can't modify that logic either. That means you would have to manually check all operations that include the `_entities` field and block any malicious queries.
+The `Query._entities` field enables the router to resolve fields of any type that's marked with `@key` by providing the [id for that entity](/federation/subgraph-spec#resolving-entity-fields-with-query_entities). If this field is exposed publicly, it means that any client can circumvent internal resolver logic and fetch any entity data by mimicking the router. Because the resolver for `_entities` is automatically provided by your subgraph library, you can't modify that logic either. That means you would have to manually check all operations that include the `_entities` field and block any malicious queries.
 
 Another reason to restrict access to subgraphs is related to the collection of field-level traces. This tracing data is included in the `extensions` key of the response from a subgraph to the router, where the data is aggregated into a trace shape based on the query plan and then sent to GraphOS. That means that any client that can query your subgraphs directly can view this data in the operation response and make inferences about a subgraph based on it.
 
-In addition to the above security concerns, preventing the outside world from accessing subgraphs directly also helps you ensure that clients (even well-meaning ones) route operations to the consolidated graph only and don't invent unintended use cases for the types and fields in a subgraph schema that are solely meant for executing the Router's query plan.
+In addition to the above security concerns, preventing the outside world from accessing subgraphs directly also helps you ensure that clients (even well-meaning ones) route operations to the consolidated graph only and don't invent unintended use cases for the types and fields in a subgraph schema that are solely meant for executing the router's query plan.
 
 ## Malicious queries
 
@@ -105,7 +105,7 @@ query {
 }
 ```
 
-But what will happen when the orders of magnitude increase for each field argument, and a _hundred-thousand_ `Post`s are requested?
+What will happen when the orders of magnitude increase for each field argument, and a _hundred-thousand_ `Post`s are requested?
 
 ```graphql
 query {
@@ -204,17 +204,17 @@ Another form of batching occurs when a client sends batches of full operations i
 
 With batched operations, it's important to consider how an entire batch might impact rate limit calculations and query cost analysis to ensure that clients can't cheat rate limits through race conditions.
 
-Finally, beyond batching of fields and operations, some forms of GraphQL-related batching can help mitigate DoS attacks and generally make your API more performant overall. Even with depth limiting in place, GraphQL queries can easily lead to exponential growth of requests to backing data sources. [Dataloaders](https://github.com/graphql/dataloader) are one way to help make as few requests as possible to backing data sources from resolver functions within the context of a single operation.
+Finally, beyond batching of fields and operations, some forms of GraphQL-related batching can help mitigate DoS attacks and generally make your API more performant overall. Even with depth limiting in place, GraphQL queries can easily lead to exponential growth of requests to backing data sources. [DataLoaders](https://github.com/graphql/dataloader) are one way to help make as few requests as possible to backing data sources from resolver functions within the context of a single operation.
 
 ## Security with managed federation
 
-Apart from protecting your GraphQL API from bad actors and locking down private data, you also need a window into how your API is being used (and by whom) to harden your GraphQL security posture. This is where a schema registry and observability tooling (such as those provided by [GraphOS](/graphos/)) come into play to help control who makes changes to your API and also monitor API usage and send alerts when something isn’t right.
+Apart from protecting your GraphQL API from bad actors and locking down private data, you also need a window into how your API is being used (and by whom) to harden your GraphQL security posture. This is where a schema registry and observability tooling (such as those provided by [GraphOS](/graphos/)) come into play to help control who makes changes to your API and also monitor API usage and send alerts when something isn't right.
 
-### Know who’s using your graph (and how)
+### Know who's using your graph (and how)
 
 To enhance the utility of traces collected in your observability tooling, it's a best practice to require every client to identify itself _and_ assign a name to every operation it executes. The web and mobile versions of Apollo Client provide straightforward APIs for setting custom headers for a client's name and version. These help you [segment traces and metrics in GraphOS by client](/graphos/metrics/client-awareness/). Other API clients can set the `apollographql-client-name` and `apollographql-client-version` request headers manually to provide client awareness. (As a bonus, client awareness also helps you identify which clients might be impacted by a proposed breaking change to your API when running schema checks.)
 
-Additionally, tracing data in GraphOS can help you monitor API performance and errors. You can configure alerts to push notifications to your team when something goes wrong, whether it’s an increase in requests per minute, changes in your p50, p95, or p99 response times, or errors in operations run against your graph. For example, a notification about a sudden increase in the error percentage might indicate that a bad actor is trying to circumvent disabled introspection and learn about a graph's schema by rapidly guessing and testing different field names. And if you want to leverage error data outside of GraphOS as well, you can also use the Apollo Router's support for [OpenTelemetry](/router/configuration/telemetry/exporters/tracing/overview) to integrate with other APM tools.
+Additionally, tracing data in GraphOS can help you monitor API performance and errors. You can configure alerts to push notifications to your team when something goes wrong, whether it's an increase in requests per minute, changes in your p50, p95, or p99 response times, or errors in operations run against your graph. For example, a notification about a sudden increase in the error percentage might indicate that a bad actor is trying to circumvent introspection that's been turned off and learn about a graph's schema by rapidly guessing and testing different field names. And if you want to leverage error data outside of GraphOS as well, you can also use the Apollo Router's support for [OpenTelemetry](/router/configuration/telemetry/exporters/tracing/overview) to integrate with other APM tools.
 
 ### Restrict write access to your graph
 
