--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -84,7 +84,11 @@ GraphOS Studio provides a powerful **Explorer** IDE that helps you visualize you
 
 </Tip>
 
+<!-- vale Apollo.Headings = NO -->
+
 #### The Schema page
+
+<!-- vale Apollo.Headings = YES -->
 
 The Schema page lists the different kinds of definitions in your schema (objects, scalars, etc.):
 
@@ -125,7 +129,7 @@ The top of the Schema page provides a **Filter Schema** box you can use to find 
 <Tip>
 
 - Click the arrow button to the left of the filter box to show/hide the filter selection dropdowns.
-- Click the button to the right of the filter box to copy a shareable URL for your currently active set of filters (you can also copy your browser's address bar directly).
+- Click the button to the right of the filter box to copy a shareable URL of your currently active set of filters (you can also copy your browser's address bar directly).
 
 </Tip>
 
