--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -272,7 +272,7 @@ Go to your variant's **Settings** page, then click **Cloud Router**:
   src="../../img/cloud-routing/configuration-main.jpg"
 />
 
-This page displays your router's endpoint URL, and it also enables you to customize its networking behavior with YAML-based config. In the **Router configuration YAML** section, you'll see a default configuration similar to the following:
+This page displays your router's endpoint URL, and it also enables you to customize its networking behavior with YAML-based config. Under **Router configuration YAML**, you'll see a default configuration similar to the following:
 
 ```yaml
 cors:
