--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -79,9 +79,9 @@ See [Adding a new subgraph](../graphs/federated-graphs#adding-a-new-subgraph).
 
 ### Add another variant
 
-Most supergraphs have multiple **variants**, each of which represents that supergraph running in a different environment (production, staging, and so on).
+Most supergraphs have multiple **variants**, each of which represents that supergraph running in a different environment (for example, production, staging, development).
 
-If your supergraph runs in multiple environments, you sould create a different variant for each.
+If your supergraph runs in multiple environments, you should create a different variant for each.
 
 [Learn how to create variants.](../graphs/federated-graphs/#adding-a-variant)
 
