--- a/src/content/graphos/basics/sub-processors.mdx
+++ b/src/content/graphos/basics/sub-processors.mdx
@@ -4,7 +4,7 @@ title: Sub-processors
 
 Apollo Graph, Inc. ("**Apollo**") may use third-party data processors ("**Sub-processors**") to process Customer Personal Data as defined in the Apollo Customer Data Processing Addendum, or other personal data which you as customer are permitted to submit to Apollo for processing per our mutual written agreement ("**Customer Personal Data**"). Capitalized terms not defined on this page have the meanings given to them in the written agreement between you and Apollo (the "**Agreement**").
 
-By subscribing to receive updates about this page, you will be notified by email about changes to Apollo’s Sub-processors that may be involved in processing your Customer Personal Data.
+By subscribing to receive updates about this page, you will be notified by email about changes to Apollo's Sub-processors that may be involved in processing your Customer Personal Data.
 
 | Company                    | Country       | Purpose/Use                         |
 | -------------------------- | ------------- | ----------------------------------- |
@@ -39,4 +39,4 @@ Current Apollo customers must subscribe to receive email notification of updates
 
 ## How to object to a new Sub-processor
 
-If you are a current Apollo customer, with a fully executed data processing agreement ("**DPA**") in place with Apollo, you may notify Apollo of an objection to its use of a new Sub-processor used to process Customer Personal Data by sending such objection to **legal@apollographql.com** within fourteen days after Apollo’s notice of such new Sub-processor, or such other period of time as set forth in your DPA. Objections will be handled as described in the DPA.
+If you are a current Apollo customer, with a fully executed data processing agreement ("**DPA**") in place with Apollo, you may notify Apollo of an objection to its use of a new Sub-processor used to process Customer Personal Data by sending such objection to **legal@apollographql.com** within fourteen days after Apollo's notice of such new Sub-processor, or such other period of time as set forth in your DPA. Objections will be handled as described in the DPA.
