--- a/src/content/graphos/explorer/index.mdx
+++ b/src/content/graphos/explorer/index.mdx
@@ -33,7 +33,7 @@ Here's an example [embedded Explorer](./embed-explorer/) you can use to try out 
 
 ### The operation editor
 
-The Explorer’s operation editor is built on [Monaco](https://microsoft.github.io/monaco-editor/). It provides common features of query-building tools, including:
+The Explorer's operation editor is built on [Monaco](https://microsoft.github.io/monaco-editor/). It provides common features of query-building tools, including:
 
 - Panels for specifying headers, variables, and environment variables
 - Persistence across sessions
@@ -48,11 +48,11 @@ The editor also provides full IntelliSense support for GraphQL, including:
 
 The editor can manage multiple operations and reason about those operations individually. As you work, the editor shifts focus to whichever operation you click into. Each operation has its own context menu (`•••`) that enables you to format it, copy a link to share, or generate a `curl` command.
 
-<!-- vale Google.Headings = NO -->
+<!-- vale Apollo.Headings = NO -->
 
 ### The Documentation tab
 
-<!-- vale Google.Headings = YES -->
+<!-- vale Apollo.Headings = YES -->
 
 The Explorer's Documentation tab enables you to step into your schema, beginning at one of its entry points. As you step into a field and its subfields, the Explorer keeps track of your current path within the schema.
 
