--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -55,11 +55,11 @@ This guide walks through configuring a generic SAML-based identity provider (IdP
 
 6. Set the following user attributes:
 
-   - **sub**: `user.email`
-     - The **sub** attribute should uniquely identify any particular user to GraphOS. In most cases, `user.email` provides this unique mapping.
-   - **email**: `user.email`
-   - **given_name**: `user.firstName`
-   - **family_name**: `user.lastName`
+   - `sub`: `user.email`
+     - The `sub` attribute should uniquely identify any particular user to GraphOS. In most cases, `user.email` provides this unique mapping.
+   - `email`: `user.email`
+   - `given_name`: `user.firstName`
+   - `family_name`: `user.lastName`
 
 7. Assign users to the Apollo GraphOS application.
 
