--- a/src/content/graphos/basics/data-privacy.mdx
+++ b/src/content/graphos/basics/data-privacy.mdx
@@ -77,7 +77,7 @@ _All_ data sent to GraphOS from both the Apollo Router and Apollo Server is tran
 
 ### Operation response fields
 
-Let’s walk through the default behaviors of the Apollo Router and Apollo Server when reporting fields in a typical GraphQL response:
+Let's walk through the default behaviors of the Apollo Router and Apollo Server when reporting fields in a typical GraphQL response:
 
 ```json
 // GraphQL Response
@@ -222,7 +222,7 @@ Each GraphOS-managed router is an instance of the [Apollo Router](/router/) runn
 
 ## GDPR
 
-Effective May 25, 2018, the General Data Protection Regulation (GDPR) expands European Union (EU) residents’ (Data Subjects) rights concerning their personal data. Meteor Development Group Inc. (“MDG” also dba Apollo) stands ready to assist our customers to become or remain compliant with GDPR after this crucial transition.
+Effective May 25, 2018, the General Data Protection Regulation (GDPR) expands European Union (EU) residents' (Data Subjects) rights concerning their personal data. Meteor Development Group Inc. (“MDG” also dba Apollo) stands ready to assist our customers to become or remain compliant with GDPR after this crucial transition.
 
 #### What is GDPR?
 
@@ -234,7 +234,7 @@ We have been complying with GDPR since before it became enforceable on May 25, 2
 
 #### How will GDPR affect the way companies use Apollo's products or services?
 
-Our products and services are not intended to be used for processing personal data. Our products and services are focused on software, systems, and applications - not individuals. If a customer wishes to set up a custom API, custom attribute, or custom event to track such data, it may do so. Our processing is data agnostic and automated, so all data is processed in the same way in accordance with a customer’s configuration. If, however, a customer believes that it has included personal data in the information processed by Apollo, we will assist the customer in meeting its obligations in accordance with the requirements of GDPR and the terms of our Data Processing Agreement.
+Our products and services are not intended to be used for processing personal data. Our products and services are focused on software, systems, and applications - not individuals. If a customer wishes to set up a custom API, custom attribute, or custom event to track such data, it may do so. Our processing is data agnostic and automated, so all data is processed in the same way in accordance with a customer's configuration. If, however, a customer believes that it has included personal data in the information processed by Apollo, we will assist the customer in meeting its obligations in accordance with the requirements of GDPR and the terms of our Data Processing Agreement.
 
 #### How can Apollo assist customers in meeting their obligations under GDPR?
 
@@ -245,9 +245,13 @@ As a Processor, we will assist customers in fulfilling their obligations as data
 - replying to investigations and inquiries from supervisory authorities concerning processing activities on behalf of a customer
 - conducting Data Protection Impact Assessments
 
+<!-- vale Apollo.Headings = NO -->
+
 #### How can Apollo help address requests from Data Subjects?
 
-Apollo has implemented a process to intake, review, and fulfill customer requests arising from Data Subject Access Requests (DSAR) they receive. As a result of a DSAR, customers might request that Apollo securely delete or return the Data Subject’s personal data. Due to their sensitivity, such requests will be handled by Apollo on a case-by-case basis.
+<!-- vale Apollo.Headings = YES -->
+
+Apollo has implemented a process to intake, review, and fulfill customer requests arising from Data Subject Access Requests (DSAR) they receive. As a result of a DSAR, customers might request that Apollo securely delete or return the Data Subject's personal data. Due to their sensitivity, such requests will be handled by Apollo on a case-by-case basis.
 
 #### Where can I learn more about Apollo's security and privacy policies?
 
