--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -153,7 +153,7 @@ query GetUser {
 
 ## Signatures and sensitive data
 
-The signature algorithm's primary purpose is to group operations that differ only cosmetically in terms of whitespace, field order, aliases, and so on. As an additional effect, the algorithm does [remove most in-line argument values](#1-transform-in-line-argument-values), which, in theory, helps maintain data privacy.
+The signature algorithm's primary purpose is to group operations that differ only cosmetically in terms of whitespace, field order, aliases, etc. As an additional effect, the algorithm does [remove most in-line argument values](#1-transform-in-line-argument-values), which, in theory, helps maintain data privacy.
 
 **However, you should not rely on this!** Ideally, your sensitive data should never reach GraphOS Studio in the first place. Whenever possible, [use GraphQL variables](/react/data/operation-best-practices/#use-graphql-variables-to-provide-arguments) instead of in-line values for arguments. This helps you control exactly which values are reported to Apollo. For details, see [GraphOS Studio data privacy and compliance](../data-privacy/).
 
